--- a/sitio-web/c/css/estilos.css
+++ b/sitio-web/c/css/estilos.css
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-areas:"navegador"
                         "cuerpo"
+                        "bloques"
                         "pie-de-pagina";
     grid-template-columns: auto;
-    grid-template-rows: 2fr 8fr 4fr;
+    grid-template-rows: 2fr 8fr 4fr 2fr;
 }
 nav {
     grid-area: navegador;
@@ -12,8 +13,7 @@ nav {
     align-items: center;
     justify-content: center;
     background-color: rgb(0, 96, 134);
-    padding: 30px;
-    margin: 5px; 
+    padding: 7px;
 }
 nav a{
     text-decoration: none;
@@ -24,6 +24,50 @@ nav a{
     padding-right: 2.5px;
 }
 
-.cuerpo.pagina{
-    grid
+.cuerpo-pagina {
+    grid-area: cuerpo;
+    background-color: rgb(134, 153, 240);
+    padding: 100px;
+}
+.cuerpo-pagina h1, p{
+    color:white;
+    text-align: center;
+    font-family: 'Gill Sans', 
+    'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.cuerpo-pagina h1 {
+    font-size: 25px;
+}
+#bloque-flex{
+    grid-area: bloques;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+}
+.bloque{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    flex:1;
+    color:black;
+    background-color: rgb(240, 220, 195);
+    padding: 40px  ;
+    margin:10px;
+    text-align: center;
+}
+footer{
+    grid-area: pie-de-pagina;
+    background-color: rgb(36, 34, 139);
+    height: 90px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+footer p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+}
+body{
+    margin: 0;
+    padding: 0;
 }
