--- a/sitio-web/c/css/estilos.css
+++ b/sitio-web/c/css/estilos.css
@@ -112,3 +112,32 @@ body{
     padding: 10px 20px;
     margin: 70px;
 }
+form {
+    display: flex;              
+    flex-direction: column;     
+    align-items: center;       
+    justify-content: center;    
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;           /* ancho máximo del formulario */
+    margin: 0 auto;             /* centra el formulario dentro del main */
+}
+
+/* Estilos de los campos */
+form input,
+form textarea {
+    width: 100%;                /* los inputs ocupan todo el ancho del formulario */
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: Arial, sans-serif;
+}
+form button {
+    padding: 10px 20px;
+    background-color: rgb(0, 96, 134);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
